# xarray_for_latlon

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: main_workflow.yml
tests/: test_nearest_gp.py
xarray_for_latlon/: __init__.py  nearest_gp.py
