[project]
name = "xarray-for-latlon"
version = "0.1.0"
description = "A small Python package for xarray lat/lon utilities"
authors = [
    {name = "Thomas Vergauwen",email = "thomas.vergauwen@meteo.be"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "xarray (>=2025.4.0,<2026.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "dask (>=2025.5.1,<2026.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
sphinx = "^7"
pytest-cov = "^6.1.1"
sphinx-rtd-theme = "^3.0.2"
nbval = "^0.11.0"
pytest-mpl = "^0.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
